<resources>
    <string name="app_name">My Shave Of The Day</string>
    <string name="action_settings">Settings</string>
    <string name="item_name_hint">Name your item...</string>
    <string name="item_name_label">Name</string>
    <string name="item_type_label">Item Type</string>
    <string name="item_brand_label">Item Brand</string>
    <string name="item_purchase_date_label">Date of Purchase</string>
    <string name="item_price_label">Price of Item</string>
    <string name="disposability_count_label">Disposability and Count</string>
    <string name="disposable_label">Disposable?</string>
    <string name="last_use_and_num_uses_label">Last Use and Number of Uses</string>
    <string name="item_comments_label">Comments</string>
    <string name="date_picker_title">Date:</string>
    <string name="new_item">New Item</string>
    <string name="delete_item">Delete</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s items</string>
    <string name="shave_date_label">Date of Shave</string>
    <string name="shave_name_hint">Name your shave...</string>
    <string name="shave_description_label">Description</string>
    <string name="shave_description">Talk about your shave. What did you use?</string>
    <string name="shave_additional_comments_label">Comments</string>
    <string name="shave_additional_comments">Additional comments go here.</string>
    <string name="shave_add_item_description">Add Item Description</string>
    <string name="menu_nav_inventory">My Inventory</string>

</resources>
