<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name_label"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_hint"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/item_type_label"
            android:paddingTop="30dp"
            style="?android:listSeparatorTextViewStyle"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_type"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_brand_label"
            android:paddingTop="30dp"
            style="?android:listSeparatorTextViewStyle"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brand_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_purchase_date_label"
            android:paddingTop="30dp"
            style="?android:listSeparatorTextViewStyle"/>

        <Button
            android:id="@+id/purchase_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_price_label"
            android:paddingTop="30dp"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:inputType="numberDecimal"
           android:ems="10"
           android:id="@+id/item_price"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disposability_count_label"
            android:paddingTop="30dp"
            style="?android:listSeparatorTextViewStyle"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/disposable_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/disposable_label"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0"
                android:layout_marginRight="16dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/minus_sign"
                    android:id="@+id/count_minus"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:id="@+id/item_count"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus_sign"
                    android:id="@+id/count_plus"
                    android:layout_marginRight="0dp"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_use_and_num_uses_label"
            android:paddingTop="30dp"
            style="?android:listSeparatorTextViewStyle"/>

`       <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/last_use_date_button"
                android:layout_weight="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/num_uses_text_view"
                android:layout_weight="1"
                android:textSize="25dp" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_comments_label"
            android:paddingTop="30dp"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/comments"/>

    </LinearLayout>
</ScrollView>